gitops/istio/virtualservices/flink-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: flink
  namespace: dev
spec:
  hosts:
    - flink.local
    - flink
  gateways:
    - istio-system/multipass-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: flink-jobmanager.dev.svc.cluster.local
            port:
              number: 8081
