gitops/istio/virtualservices/kiali-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-system
spec:
  hosts:
    - kiali.local
    - kiali
  gateways:
    - istio-system/multipass-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: kiali
            port:
              number: 20001
