gitops/istio/virtualservices/minio-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: minio
  namespace: dev
spec:
  hosts:
    - minio.local
    - minio
  gateways:
    - istio-system/multipass-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: minio.dev
            port:
              number: 9001
