gitops/istio/virtualservices/redpanda-console-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: redpanda-console
  namespace: dev
spec:
  hosts:
    - redpanda-console.local
    - redpanda-console
  gateways:
    - istio-system/multipass-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: redpanda-console.dev
            port:
              number: 8080
