gitops/istio/virtualservices/trino-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: trino
  namespace: iceberg
spec:
  hosts:
    - trino.local
    - trino
  gateways:
    - istio-system/multipass-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: trino.iceberg.svc.cluster.local
            port:
              number: 8080
